Update locale: es-ES

--- a/extension/locale/es-ES/cookies.properties
+++ b/extension/locale/es-ES/cookies.properties
@@ -7,11 +7,11 @@ cookies.Session=Sesión
 # Label used for cookies permission.
 cookies.AllowGlobally=Aceptar cookies de sitios web
 cookies.tip.AllowGlobally=Aceptar / bloquear todas las cookies por defecto.
-# LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
+# LOCALIZATION NOTE (cookies.showCookieEvents, cookies.tip.showCookieEvents):
 # Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
 # If checked, various cookies events are displayed in Firebug's Console panel.
-cookies.LogEvents=Mostrar registros en la consola
-cookies.tip.LogEvents=Se usar para mostrar los eventos (cambios, borrados) de las cookies en la Consola.
+cookies.showCookieEvents=Mostrar eventos de cookies
+cookies.tip.showCookieEvents=Almacena eventos de cookies (cambios, borrados) en la consola
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
 # if the permission is changed to deny.
