--- a/extension/locale/es-ES/firebug.properties
+++ b/extension/locale/es-ES/firebug.properties
@@ -60,6 +60,7 @@ minimized=Minimizado
 enablement.for_all_pages=para todas las páginas
 enablement.on=Activado
 enablement.off=Desactivado
+enablement.Panel_activation_status=Activación de panel:
 none=Cerrado
 Firebug_-_inactive_for_current_website=Firebug - inactivo para el sitio actual
 Activate_Firebug_for_the_current_website=Activar Firebug para el sitio actual
@@ -660,6 +661,10 @@ html.tip.Copy_CSS_Path=Copiar la ruta CSS del elemento al portapapeles
 # panel when clicking an error object.
 CopyLocation=Copiar ubicación
 clipboard.tip.Copy_Location=Copiar la URL de la ubicación del objeto al portapapeles
+CopyURLParameters=Copiar parámetros de URL
+net.tip.Copy_URL_Parameters=Copiar los parámetros del URL al portapapeles
+CopyPOSTParameters=Copiar parámetros POST
+net.tip.Copy_POST_Parameters=Copiar los parámetros POST al portapapeles
 CopyLocationParameters=Copiar ubicación con parámetros
 net.tip.Copy_Location_Parameters=Copiar la URL con parámetros al portapapeles
 CopyRequestHeaders=Copiar encabezados de solicitud
@@ -946,8 +951,8 @@ firebug.NormalTextSize=Tamaño de texto normal
 firebug.menu.tip.Normal_Text_Size=Restaurar el tamaño de texto predeterminado de Firebug
 firebug.Website=Página web de Firebug…
 firebug.menu.tip.Website=Abrir la página web oficial de Firebug
-firebug.FAQ=Preguntas frecuentes…
-firebug.menu.tip.FAQ=Abre la página en la que se responden las preguntas más frecuentes
+firebug.help=Ayuda…
+firebug.menu.tip.help=Abrir la página con vínculos a explicaciones sobre Firebug
 firebug.Documentation=Documentación…
 firebug.menu.tip.Documentation=Abrir la documentación de Firebug
 firebug.KeyShortcuts=Atajos de teclado…
@@ -1225,9 +1230,6 @@ script.suggestion.no_system_source_debugging=Por el momento no se puede usar Fir
 # The suggestion message represents an advice how to solve the problem.
 script.warning.no_javascript=No hay Javascript en esta página
 script.suggestion.no_javascript2=Si las etiquetas <script> tienen un atributo "type", éste debe ser "text/javascript" o "application/javascript". Además, los script deben ser analizables (sintácticamente correctos).
-# LOCALIZATION NOTE (script.warning.no_chrome_debugging, script.suggestion.no_chrome_debugging):
-# Message displayed in the Script panel, if the page opened is accessed via a chrome URL.
-# The suggestion message represents an advice how to solve the problem.
 # LOCALIZATION NOTE (script.warning.debugger_active, script.suggestion.debugger_active):
 # Message displayed in the Script panel, if the page is opened in different tabs/windows and
 # the debugger is already halted at a breakpoint inside another tab/window.
@@ -1356,6 +1358,9 @@ firebug.dom.noChildren2=No hay objetos hijos
 # LOCALIZATION NOTE (firebug.reps.more): Label shown when the displayed array/list has
 # more elements then displayed on the screen. "..." is automatically appended.
 firebug.reps.more=más
+# LOCALIZATION NOTE (firebug.reps.reference): Label shown when the displayed array/list has
+# a reference to itself (a cycle).
+firebug.reps.reference=Detectada referencia cíclica
 # LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
 # Label used in the DOM panel for local/session/global storage.
 # It's informing the user about the number of items in the storage.
@@ -1397,3 +1402,38 @@ console.msg.nothing_to_output=(nada que mostrar)
 # LOCALIZATION NOTE (console.msg.nothing_to_output):
 # Used by the console panel if an empty string is passed into a Console API.
 console.msg.an_empty_string=(cadena vacía)
+# LOCALIZATION NOTE (cookies.legacy.firecookie_detected, cookies.legacy.uninstall, cookies.legacy.uninstall_and_restart):
+# A message and labels used when Firecookie is detected. This extension has been integrated with
+# Firebu and should not be installed together with Firebug 1.10+
+cookies.legacy.firecookie_detected=Se ha detectado la extensión Firecookie, que se ha integrado por defecto en Firefox 1.10. Para evitar conflictos debe desinstalar Firecookie. \n\nLuego debe reiniciar para completar la desinstalación de la extensión.
+cookies.legacy.uninstall=Desinstalar
+cookies.legacy.uninstall_and_restart=Desinstalar y reiniciar
+# LOCALIZATION NOTE (firebug.cmd.help.values, console.cmd.help_title_desc):
+console.cmd.help_title=API de línea de comandos
+console.cmd.help_title_desc=Pulse F1 para abrir la ayuda e línea de Firebug
+# LOCALIZATION NOTE (console.cmd.help.$): Description for Command Line API that is logged
+# in the the Console panel if the user types "help" into the command line.
+console.cmd.help.$=Devuelve un elemento con ese id.
+console.cmd.help.$$=Devuelve un array de elementos que coinciden con el selector CSS.
+console.cmd.help.$x=Devuelve un array de elementos que coinciden con la expresión XPath.
+console.cmd.help.dir=Imprime un listado interactivo de todas las propiedades del objeto, idéntico a la vista del panel DOM.
+console.cmd.help.dirxml=Imprime el árbol fuente XML de un elemento HTML o XML, de forma idéntica a la vista del panel HTML. Puede pulsar en cualquier nodo del panel HTML para inspeccionarlo.
+console.cmd.help.cd=Por defecto, las expresiones de línea de comandos son relativas a la ventana de máximo nivel de la página.
+console.cmd.help.clear=Limpia la consola.
+console.cmd.help.copy=Copia el parámetro al portapapeles. Puede ser el valor retornado por una función o un objeto.
+console.cmd.help.inspect=Inspecciona un objeto en el panel más adecuado, o el panel identificao por el segundo argumento opcional. Los paneles disponibles son: HTML, Hojas de estilo, Scripts y DOM.
+console.cmd.help.keys=Devuelve una array con los nombres de todas las propiedades del objeto.
+console.cmd.help.values=Devuelve una array con lo valores de todas las propiedades del objeto.
+console.cmd.help.debug=Añade una parada a la pimera línea de una función.
+console.cmd.help.undebug=Elimina la parada de la primra línea de una función.
+console.cmd.help.monitor=Activa almacenaje en registro de todas las llamadas a una función.
+console.cmd.help.unmonitor=Desactiva almacenaje en registro de todas las llamadas a una función.
+console.cmd.help.monitorEvents=Activa el almacenaje en el registro de todos los eventos enviados a un objeto. El segundo argumento (opcional) puede definir eventos específicos e incluso tipos de registro. Los tipos de evento disponibles son: composition, contextmenu, drag, focus, form, key, load, mouse, mutation, paint, scroll, text, ui, xul y clipboard.
+console.cmd.help.unmonitorEvents=Desactiva el almacenaje en el registro de todos los eventos enviados a un objeto. El segundo argumento (opcional) puede definir eventos específicos o familias de eventos para los cuales se vuelva a activar.
+console.cmd.help.profile=Activa el analizador de JavaScript. El segundo argumento (opcional) contiene el texto a imprimir en la cabecera del informe.
+console.cmd.help.profileEnd=Desactiva el analizador JavaScript e imprime su informe.
+console.cmd.help.table=Permite almacenar en el registro los datos aportados en formato tabla. El método toma un parámetro obligatorio que representa datos en formato tabla (array de arrays o lista de objetos). El segundo parámetro (opcional) puede usarse para especificar columnas y/o propiedades a almacenar en el registro.
+console.cmd.help.$0=Representa el último elemento seleccionado mediante el Inspector.
+console.cmd.help.$1=Representa el penúltimo elemento seleccionado mediante el Inspector.
+console.cmd.help.$n=Devuelve uno de los 5 últimos elementos seleccionados mediante el Inspector. Este método tiene como parámetro necesario el índice del elemento (comienza en 0).
+console.cmd.help.help=Muestra ayuda para todos los comandos disponibles.
