Issue 5625 (Filter "character encoding" warnings) http://code.google.com/p/fbug/issues/detail?id=5625

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -110,8 +110,8 @@ ShowJavaScriptWarnings=Show JavaScript Warnings
 console.option.tip.Show_JavaScript_Warnings=Log JavaScript warning messages into the console
 ShowCSSErrors=Show CSS Errors
 console.option.tip.Show_CSS_Errors=Log CSS error messages into the console
-ShowXMLErrors=Show XML Errors
-console.option.tip.Show_XML_Errors=Log XML error messages into the console
+ShowXMLHTMLErrors=Show XML/HTML Errors
+console.option.tip.Show_XML_HTML_Errors=Log XML and HTML error messages into the console
 ShowStackTrace=Show Stack Trace With Errors
 console.option.tip.Show_Stack_Trace=Show stack trace information for error messages
 ShowXMLHttpRequests=Show XMLHttpRequests
