Fixed wording for "circular reference" (see issue 3663)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1572,7 +1572,7 @@ firebug.reps.more=more
 
 # LOCALIZATION NOTE (firebug.reps.reference): Label shown when the displayed array/list has
 # a reference to itself (a cycle).
-firebug.reps.reference=Cycle reference detected
+firebug.reps.reference=Circular reference
 
 # LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
 # Label used in the DOM panel for local/session/global storage.
