Locale update: zh-CN

--- a/extension/locale/zh-CN/cookies.properties
+++ b/extension/locale/zh-CN/cookies.properties
@@ -7,11 +7,11 @@ cookies.Session=会话
 # Label used for cookies permission.
 cookies.AllowGlobally=接受所有站点的 cookie
 cookies.tip.AllowGlobally=默认接受或阻止所有站点的 cookie
-# LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
+# LOCALIZATION NOTE (cookies.showCookieEvents, cookies.tip.showCookieEvents):
 # Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
 # If checked, various cookies events are displayed in Firebug's Console panel.
-cookies.LogEvents=在 console 中显示 log
-cookies.tip.LogEvents=在控制台面板中显示 cookie 的改变、删除等事件
+cookies.showCookieEvents=显示 cookie 事件
+cookies.tip.showCookieEvents=在控制台中记录 cookie 的改变、删除等事件
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
 # if the permission is changed to deny.
