--- a/extension/locale/zh-CN/firebug.properties
+++ b/extension/locale/zh-CN/firebug.properties
@@ -60,6 +60,7 @@ minimized=最小化状态
 enablement.for_all_pages=对所有页面
 enablement.on=启用
 enablement.off=禁用
+enablement.Panel_activation_status=面板激活状态:
 none=关闭状态
 Firebug_-_inactive_for_current_website=Firebug - 对当前网站未激活
 Activate_Firebug_for_the_current_website=为当前网站激活 Firebug
@@ -660,6 +661,10 @@ html.tip.Copy_CSS_Path=复制该元素的 CSS 路径到剪贴板
 # panel when clicking an error object.
 CopyLocation=复制地址
 clipboard.tip.Copy_Location=复制该对象地址的 URL 到剪贴板
+CopyURLParameters=复制 URL 参数
+net.tip.Copy_URL_Parameters=复制 URL 参数到剪贴板
+CopyPOSTParameters=复制 POST 参数
+net.tip.Copy_POST_Parameters=复制 POST 参数到剪贴板
 CopyLocationParameters=复制带参数的地址
 net.tip.Copy_Location_Parameters=复制包括参数在内的 URL 到剪贴板
 CopyRequestHeaders=复制请求头信息
@@ -946,8 +951,8 @@ firebug.NormalTextSize=重置
 firebug.menu.tip.Normal_Text_Size=重置 Firebug 使用的文本大小
 firebug.Website=Firebug 官网...
 firebug.menu.tip.Website=打开 Firebug 官方网站
-firebug.FAQ=常见问题...
-firebug.menu.tip.FAQ=打开常见问题答案网页
+firebug.help=帮助...
+firebug.menu.tip.help=打开 Firebug 的帮助页面
 firebug.Documentation=文档...
 firebug.menu.tip.Documentation=打开 Firebug 文档
 firebug.KeyShortcuts=快捷键...
@@ -1225,9 +1230,6 @@ script.suggestion.no_system_source_debugging=Firebug 目前无法用于系统源
 # The suggestion message represents an advice how to solve the problem.
 script.warning.no_javascript=本页面不包含 Javascript
 script.suggestion.no_javascript2=如果 <script> 标签有 "type" 属性, 其值应为 "text/javascript" 或者 "application/javascript". 另外脚本必须可解析(语法上正确)。
-# LOCALIZATION NOTE (script.warning.no_chrome_debugging, script.suggestion.no_chrome_debugging):
-# Message displayed in the Script panel, if the page opened is accessed via a chrome URL.
-# The suggestion message represents an advice how to solve the problem.
 # LOCALIZATION NOTE (script.warning.debugger_active, script.suggestion.debugger_active):
 # Message displayed in the Script panel, if the page is opened in different tabs/windows and
 # the debugger is already halted at a breakpoint inside another tab/window.
@@ -1356,6 +1358,9 @@ firebug.dom.noChildren2=没有子对象
 # LOCALIZATION NOTE (firebug.reps.more): Label shown when the displayed array/list has
 # more elements then displayed on the screen. "..." is automatically appended.
 firebug.reps.more=更多
+# LOCALIZATION NOTE (firebug.reps.reference): Label shown when the displayed array/list has
+# a reference to itself (a cycle).
+firebug.reps.reference=检测到循环引用
 # LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
 # Label used in the DOM panel for local/session/global storage.
 # It's informing the user about the number of items in the storage.
@@ -1397,3 +1402,38 @@ console.msg.nothing_to_output=(无输出)
 # LOCALIZATION NOTE (console.msg.nothing_to_output):
 # Used by the console panel if an empty string is passed into a Console API.
 console.msg.an_empty_string=(空字符串)
+# LOCALIZATION NOTE (cookies.legacy.firecookie_detected, cookies.legacy.uninstall, cookies.legacy.uninstall_and_restart):
+# A message and labels used when Firecookie is detected. This extension has been integrated with
+# Firebu and should not be installed together with Firebug 1.10+
+cookies.legacy.firecookie_detected=检测到了 Firecookie 扩展。该扩展已经默认集成到 Firebug 1.10 中。为避免冲突，请卸载 Firecookie。\n\n必须重启浏览器来完成扩展的卸载。
+cookies.legacy.uninstall=卸载
+cookies.legacy.uninstall_and_restart=卸载并重启
+# LOCALIZATION NOTE (firebug.cmd.help.values, console.cmd.help_title_desc):
+console.cmd.help_title=命令行 API
+console.cmd.help_title_desc=按 F1 打开在线 Firebug 帮助
+# LOCALIZATION NOTE (console.cmd.help.$): Description for Command Line API that is logged
+# in the the Console panel if the user types "help" into the command line.
+console.cmd.help.$=返回指定 id 的单个元素
+console.cmd.help.$$=返回与指定 CSS 选择器匹配的元素的数组
+console.cmd.help.$x=返回与指定 XPath 表达式匹配的元素的数组
+console.cmd.help.dir=打印指定对象所有属性的互动列表。与 DOM 面板中的视图一致
+console.cmd.help.dirxml=打印指定 HTML/XML 元素的 XML 源码树。与 HTML 面板中的视图一致。单击任意节点以在 HTML 面板中查看它
+console.cmd.help.cd=命令行表达式默认对应于页面的顶层窗口。cd() 可用来在页面顶层窗口和指定框架窗口间切换
+console.cmd.help.clear=清空控制台
+console.cmd.help.copy=复制函数的返回值或者对象到剪贴板
+console.cmd.help.inspect=在最合适的面板中查看对象。可以通过第二个参数来指定面板，包括 "html", "stylesheet", "script", 和 "dom"
+console.cmd.help.keys=返回包含指定对象所有属性名称的数组
+console.cmd.help.values=返回包含指定对象所有属性值的数组
+console.cmd.help.debug=在指定函数的第一行添加断点
+console.cmd.help.undebug=移除指定函数第一行的断点
+console.cmd.help.monitor=打开对指定函数所有调用的日志
+console.cmd.help.unmonitor=关闭对指定函数所有调用的日志
+console.cmd.help.monitorEvents=打开指定对象所有事件的日志。可以通过第二个参数来指定只记录特定的事件/事件类型，包括 "composition", "contextmenu", "drag", "focus", "form", "key", "load", "mouse", "mutation", "paint", "scroll", "text", "ui", "xul", 和 "clipboard"
+console.cmd.help.unmonitorEvents=关闭指定对象所有事件的日志。可以通过第二个参数来指定只停止记录特定的事件/事件类型。
+console.cmd.help.profile=开始收集 Javascript 概况。可以通过第二个参数来指定概况报告表头的文本
+console.cmd.help.profileEnd=停止记录 Javascript 概况并打印报告
+console.cmd.help.table=可用于以表格布局记录数组/对象的数组。可以通过第二个参数来指定只记录特定的列/属性
+console.cmd.help.$0=代表使用查看器选中的最后一个元素
+console.cmd.help.$1=代表使用查看器选中的倒数第二个元素
+console.cmd.help.$n=返回使用查看器选中的最后五个元素之一。参数为从 0 开始的序号
+console.cmd.help.help=显示所有可用命令的帮助
