fix issue #5639: Delete all watch expressions

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -469,7 +469,9 @@ watch.tip.Edit_Watch=Edit the watch expression's value
 DeleteProperty=Delete Property
 dom.tip.Delete_Property=Delete the property
 DeleteWatch=Delete Watch
+DeleteAllWatches=Delete All Watches
 watch.tip.Delete_Watch=Delete the watch expression
+watch.tip.Delete_All_Watches=Delete all the watch expressions
 
 # LOCALIZATION NOTE (SetBreakpoint, script.tip.Set_Breakpoint): Context menu item of the Script panel.
 # Toggles setting of a breakpoint at the current line of a script inside the Script panel.
