Introducing new Script panel for remote debuggin based on JSD2

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -34,6 +34,9 @@ Panel-callstack=Stack
 panel.tip.callstack=Allows observing the current JavaScript call stack
 Panel-scopes=Scopes
 
+Panel-jsd2script=JSD2
+panel.tip.script=Allows remote debugging of JavaScript
+
 firebug.DetachFirebug=Open Firebug in New Window
 firebug.AttachFirebug=Attach Firebug to Browser Window
 
