Improved the code according to the comments

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -316,3 +316,5 @@ cookies.console.Filter_By_Cookies=Filter By Cookies
 # LOCALIZATION NOTE (firebug.shortcut.removeAllCookies.label) Label used by the
 # Customize Shortcuts dialog (Firebug menu)
 firebug.shortcut.removeAllCookies.label=Remove All Cookies
+
+cookie.sizeinfo.Size=Cookie Size
