Displayed the raw size of the cookie

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -317,4 +317,5 @@ cookies.console.Filter_By_Cookies=Filter By Cookies
 # Customize Shortcuts dialog (Firebug menu)
 firebug.shortcut.removeAllCookies.label=Remove All Cookies
 
-cookie.sizeinfo.Size=Cookie Size
+cookie.sizeinfo.Size=Size
+cookie.sizeinfo.RawSize=Raw Size
