Another improvement to issue 5834

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -318,4 +318,4 @@ cookies.console.Filter_By_Cookies=Filter By Cookies
 firebug.shortcut.removeAllCookies.label=Remove All Cookies
 
 cookie.sizeinfo.Size=Size
-cookie.sizeinfo.RawSize=Raw Size
+cookie.sizeinfo.Raw_Size=Raw Size
