Introducing the CallstackPanel + bunch of helpers like StackTrace, StackFrame (+reps), SourceLink and main module with all new deps

--- a/extension/locale/en-US/firebug-jsd2.properties
+++ b/extension/locale/en-US/firebug-jsd2.properties
@@ -4,3 +4,5 @@ panel.tip.jsd2script=Allows debugging of JavaScript
 Panel-jsd2breakpoints=Breakpoints
 panel.tip.jsd2breakpoints=Allows manipulating the set breakpoints
 
+Panel-jsd2callstack=Callstack
+panel.tip.jsd2callstack=Allows observing the current JavaScript call stack
