--- a/extension/locale/en-US/firebug-jsd2.properties
+++ b/extension/locale/en-US/firebug-jsd2.properties
@@ -6,3 +6,6 @@ panel.tip.jsd2breakpoints=Allows manipulating the set breakpoints
 
 Panel-jsd2callstack=Callstack
 panel.tip.jsd2callstack=Allows observing the current JavaScript call stack
+
+Panel-jsd2watches=Watch
+panel.tip.watches=Allows inspecting the JavaScript variables available in the current stack frame and defining watch expressions
