--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -65,13 +65,17 @@ cookies.PermissionsIntro=Choose web sites where Cookies panel will be enabled or
 cookies.SystemPages=System Pages
 cookies.LocalFiles=Local Files
 
-# LOCALIZATION NOTE (cookies.confirm.removeall): Used in a confirmation dialog when cookies
-# are going to be deleted deleted (or permission is set do deny and cookies should be deleted).
+# LOCALIZATION NOTE (cookies.confirm.removeall): Used in a confirmation dialog when all cookies
+# of a website are going to be deleted (or permission is set do deny and cookies should be deleted).
 cookies.confirm.removeall=Do you want to remove all cookies in the list?
 
 # LOCALIZATION NOTE (cookies.confirm.removeallsession): Used in a confirmation dialog when
 # all session cookies are going to be deleted
 cookies.confirm.removeallsession=Do you want to remove all session cookies in the list?
+
+# LOCALIZATION NOTE (cookies.confirm.Remove_All_From_Host): Used in a confirmation dialog when cookies
+# from a specific host are going to be deleted (or permission is set do deny and cookies should be deleted).
+cookies.confirm.Remove_All_From_Host=Do you want to remove all cookies from %S?
 
 # LOCALIZATION NOTE (cookies.msg.Do_not_show_this_message_again): 
 # Message within a confirmation dialog that is displayed when deleting cookies.
