Display a message to the user if there is no help page for a command line command

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1660,3 +1660,8 @@ console.cmd.help.$0=Represents the last element selected via the Inspector.
 console.cmd.help.$1=Represents the second last element selected via the Inspector.
 console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
 console.cmd.help.help=Displays help for all available commands.
+
+# LOCALIZATION NOTE (console.cmd.helpUrlNotAvailable): A message used displayed to the user
+# if registered command doesn't have help URL associated and the user clicks on the command name.
+# List of command names is displayed if you type "help" (without quotes) into the command line.
+console.cmd.helpUrlNotAvailable=Help page for this command is not available.
