--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1665,3 +1665,10 @@ console.cmd.help.help=Displays help for all available commands.
 # if registered command doesn't have help URL associated and the user clicks on the command name.
 # List of command names is displayed if you type "help" (without quotes) into the command line.
 console.cmd.helpUrlNotAvailable=Help page for this command is not available.
+
+css.selector.noSelection=Mouseover CSS Rules to preview, Click to select one
+css.selector.noSelectionResults=No matching elements
+css.selector.selectorError=Selection failed:
+css.selector.Selection=Selection
+css.selector.TryASelector=Try a selector...
+
