--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -193,6 +193,7 @@ cookies.header.value=Value
 cookies.header.rawValue=Raw Value
 cookies.header.domain=Domain
 cookies.header.size=Size
+cookies.header.rawSize = Raw Size
 cookies.header.path=Path
 cookies.header.expires=Expires
 cookies.header.security=Security
