Fixed text for empty Selection side panel

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1667,7 +1667,7 @@ console.cmd.help.help=Displays help for all available commands.
 # List of command names is displayed if you type "help" (without quotes) into the command line.
 console.cmd.helpUrlNotAvailable=Help page for this command is not available.
 
-css.selector.noSelection=Mouseover CSS Rules to preview, Click to select one
+css.selector.noSelection=Hover CSS rules to preview, click to select one.
 css.selector.noSelectionResults=No matching elements
 css.selector.selectorError=Selection failed:
 css.selector.Selection=Selection
