Added tooltip to Selection side panel

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1671,5 +1671,6 @@ css.selector.noSelection=Hover CSS rules to preview, click to select one.
 css.selector.noSelectionResults=No matching elements
 css.selector.selectorError=Selection failed:
 css.selector.Selection=Selection
+panel.tip.selector=Displays elements matching a CSS selector
 css.selector.TryASelector=Try a selector...
 
