Display proper error message when CSS selector fails + remove 'selectbug' from the code (related to issue 5931)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1674,3 +1674,7 @@ css.selector.Selection=Selection
 panel.tip.selector=Displays elements matching a CSS selector
 css.selector.TryASelector=Try a selector...
 
+# LOCALIZATION NOTE (css.selector.unknownErrorMessage): An error message displayed
+# to the user if querySelectorAll (used by the Selector side panel) fails and there is no
+# explanantion coming from the platform.
+css.selector.unknownErrorMessage=Failed to execute specified selector string
