Added hint for localization of the Selection side panel tab tooltip

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1671,7 +1671,11 @@ css.selector.noSelection=Hover CSS rules to preview, click to select one.
 css.selector.noSelectionResults=No matching elements
 css.selector.selectorError=Selection failed:
 css.selector.Selection=Selection
+
+# LOCALIZATION NOTE (panel.tip.selector): Tooltip text for the Selection side panel
+# Shown when hovering the Selection panel tab
 panel.tip.selector=Displays elements matching a CSS selector
+
 css.selector.TryASelector=Try a selector...
 
 # LOCALIZATION NOTE (css.selector.unknownErrorMessage): An error message displayed
