New Get Matching Elemens context menu item for CSS panel context menu + Rename Selection side panel to Elements

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1670,9 +1670,18 @@ console.cmd.helpUrlNotAvailable=Help page for this command is not available.
 css.selector.noSelection=Hover CSS rules to preview, click to select one.
 css.selector.noSelectionResults=No matching elements
 css.selector.selectorError=Selection failed:
-css.selector.Selection=Selection
+
+# LOCALIZATION NOTE (css.selector.Selection): Title for Selector side panel displayed
+# in the CSS panel.
+css.selector.Selection=Elements
+
 panel.tip.selector=Displays elements matching a CSS selector
 css.selector.TryASelector=Try a selector...
+
+# LOCALIZATION NOTE (css.selector.cmd.getMatchingElements): A label for context menu item.
+# The menu-item is used in the CSS panel's context menu and allows to get matched elements
+# for the clicked rule selector. Elements are displayed in the side panel.
+css.selector.cmd.getMatchingElements=Get Matching Elements
 
 # LOCALIZATION NOTE (css.selector.unknownErrorMessage): An error message displayed
 # to the user if querySelectorAll (used by the Selector side panel) fails and there is no
