Change helper description used in empty Selection side panel

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1667,7 +1667,10 @@ console.cmd.help.help=Displays help for all available commands.
 # List of command names is displayed if you type "help" (without quotes) into the command line.
 console.cmd.helpUrlNotAvailable=Help page for this command is not available.
 
-css.selector.noSelection=Hover CSS rules to preview, click to select one.
+# LOCALIZATION NOTE (css.selector.noSelection): A help description used in empty
+# Selection side panel.
+css.selector.noSelection=Type custom selector or right click CSS rule and pick <b>Get Matching Elements</b>.
+
 css.selector.noSelectionResults=No matching elements
 css.selector.selectorError=Selection failed:
 
