Update locale: nl

--- a/extension/locale/nl/firebug.properties
+++ b/extension/locale/nl/firebug.properties
@@ -76,7 +76,7 @@ firebug.menu.Top=Bovenzijde
 firebug.menu.tip.Top=Firebug uitlijnen naar de bovenzijde van het gebruikersvenster
 firebug.menu.Bottom=Onderzijde
 firebug.menu.tip.Bottom=Firebug uitlijnen naar de onderzijde van het gebruikersvenster
-firebug.menu.Left=Link
+firebug.menu.Left=Links
 firebug.menu.tip.Left=Firebug uitlijnen naar de linkerzijde van het gebruikersvenster
 firebug.menu.Right=Rechts
 firebug.menu.tip.Right=Firebug uitlijnen naar de rechterzijde van het gebruikersvenster
