Nicer output for cd()

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -836,6 +836,11 @@ console.MethodNotSupported=Firebug console does not support '%S'
 # %S = Name of the unsupported method
 commandline.MethodNotSupported=Firebug Command Line does not support '%S'
 
+# LOCALIZATION NOTE (commandline.CurrentWindow): Message displayed in the Console panel when
+# cd(someWindow) is run. A space and a representation of the window object is appended
+# internally by Firebug.
+commandline.CurrentWindow=Current window:
+
 # LOCALIZATION NOTE (console.Disable_Break_On_All_Errors, console.Break_On_All_Errors):
 # Tooltip for the "Break on... " button used when the Console panel is selected.
 console.Disable_Break_On_All_Errors=Disable Break On All Errors
